user-service
 - version 1 done
 - needs to add more test on the routes
 - to be added later today so i can move on in the next service
