# user-service/src/types/types.ts
@@ -1,0 +1,16 @@
+import * as express from "express";
+
+export interface UserData {
+  _id: string;
+  username: string;
+}
+
+declare global {
+  namespace Express {
+    interface Request {
+      context: {
+        userData?: UserData;
+      };
+    }
+  }
+}
